Fix recommended videos width on mobile

--- a/app/assets/stylesheets/videos/index/videos.scss
+++ b/app/assets/stylesheets/videos/index/videos.scss
@@ -196,5 +196,10 @@
     flex-direction: column;
     gap: 0;
     padding: 0;
+
+    &__videos {
+      display: flex;
+      grid-template-columns: none;
+    }
   }
 }
