--- a/app/assets/stylesheets/videos/show/show.scss
+++ b/app/assets/stylesheets/videos/show/show.scss
@@ -81,7 +81,6 @@ $show-video-width: 1300px;
   margin: 0 0.5em;
   flex-direction: column;
   max-width: 500px;
-  min-width: 400px;
 }
 
 @media (max-width: 700px) {
